--- a/getreview.ipynb
+++ b/getreview.ipynb
@@ -2,182 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver import ActionChains\n",
+    "from datetime import datetime\n",
     "import bs4\n",
     "import pandas as pd\n",
+    "import time\n",
     "driver = webdriver.Chrome()\n",
-    "driver.get('https://th.tripadvisor.com/Attraction_Review-g303915-d6669435-Reviews-Wat_Pho_Chai-Nong_Khai_Nong_Khai_Province.html')\n",
+    "driver.get('https://th.tripadvisor.com/Attraction_Review-g303915-d7923675-Reviews-Tha_Sadet_Market-Nong_Khai_Nong_Khai_Province.html')\n",
     "\n",
-    "review_data = pd.DataFrame(columns = ['name', 'city', 'score','title','comment', 'date'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>city</th>\n",
-       "      <th>score</th>\n",
-       "      <th>title</th>\n",
-       "      <th>comment</th>\n",
-       "      <th>date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>paitoon</td>\n",
-       "      <td>กรุงเทพมหานคร</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>วัดโพธิ์ เป็นวัดพระอารามหลวง</td>\n",
-       "      <td>วัดโพธิ์ชัยเป็นสถานที่ศักดิ์ของหนองคายและประเท...</td>\n",
-       "      <td>22/07/20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>narasri99</td>\n",
-       "      <td>เมืองนนทบุรี</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>วัดหลวงพ่อพระใส องค์พระงดงาม</td>\n",
-       "      <td>วัดติดถนนใหญ่เดินทางไปไหว้พระทำบุญได้สะดวก  บร...</td>\n",
-       "      <td>30/12/19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Nix B</td>\n",
-       "      <td>กรุงเทพมหานคร</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>วัดที่คนมาหนองคายต้องมากราบไหว้</td>\n",
-       "      <td>เป็นวัดทีชาวหนองคายนับถือ โดยมีหลวงพ่อใสที่ศัก...</td>\n",
-       "      <td>27/11/19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Nujjaree23</td>\n",
-       "      <td>สูงเนิน</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>กราบพระใส</td>\n",
-       "      <td>วัดโพธิ์ชัยนั้นเป็นพระอารามหลวง ตั้งอยู่ที่ถนน...</td>\n",
-       "      <td>20/09/19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Pukimi</td>\n",
-       "      <td>กรุงเทพมหานคร</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>กราบหลวงพ่อพระใส</td>\n",
-       "      <td>กราบสักการะหลวงพ่อพระใส หลวงพ่อศักดิ์สิทธิ์คู...</td>\n",
-       "      <td>30/07/19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>taweewun</td>\n",
-       "      <td>เมืองพะเยา</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>วัดหลวงพ่อพระใส</td>\n",
-       "      <td>เป็นวัดที่ติดกับ บขส.หนองคาย ประตูรั้วด้านข้าง...</td>\n",
-       "      <td>26/04/19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>นันทิตา</td>\n",
-       "      <td>เมืองหนองคาย</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>ศรัทธา</td>\n",
-       "      <td>มาเที่ยวหนองคายต้องมาขอพรที่นี่หลวงพ่อพระใส สิ...</td>\n",
-       "      <td>23/04/19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>fondoodee</td>\n",
-       "      <td>กรุงเทพมหานคร</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>ไหว้พระใส</td>\n",
-       "      <td>มาหนองคายต้องมาไหว้วัดพระใส สวยงาม ศักดิ์สิทธิ...</td>\n",
-       "      <td>29/01/19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>gik15</td>\n",
-       "      <td>Bangkok</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>วัดโพธิ์ชัย</td>\n",
-       "      <td>กราบขอพรหลวงพ่อพระใส วัดโพธิ์ชัย จังหวัดหนองคา...</td>\n",
-       "      <td>05/09/18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>PhatteenanK</td>\n",
-       "      <td>เมืองอุดรธานี</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>วัดโพธิ์ชัย</td>\n",
-       "      <td>วัดพระใสเป็นวัดที่มีความเชื่อว่าลูกหลานพญานาค ...</td>\n",
-       "      <td>02/02/18</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          name           city score                            title  \\\n",
-       "0      paitoon  กรุงเทพมหานคร   5.0     วัดโพธิ์ เป็นวัดพระอารามหลวง   \n",
-       "1    narasri99   เมืองนนทบุรี   5.0     วัดหลวงพ่อพระใส องค์พระงดงาม   \n",
-       "2        Nix B  กรุงเทพมหานคร   4.0  วัดที่คนมาหนองคายต้องมากราบไหว้   \n",
-       "3   Nujjaree23        สูงเนิน   5.0                        กราบพระใส   \n",
-       "4       Pukimi  กรุงเทพมหานคร   5.0                กราบหลวงพ่อพระใส    \n",
-       "5     taweewun     เมืองพะเยา   4.0                  วัดหลวงพ่อพระใส   \n",
-       "6      นันทิตา   เมืองหนองคาย   4.0                           ศรัทธา   \n",
-       "7    fondoodee  กรุงเทพมหานคร   5.0                        ไหว้พระใส   \n",
-       "8        gik15        Bangkok   4.0                      วัดโพธิ์ชัย   \n",
-       "9  PhatteenanK  เมืองอุดรธานี   5.0                      วัดโพธิ์ชัย   \n",
-       "\n",
-       "                                             comment      date  \n",
-       "0  วัดโพธิ์ชัยเป็นสถานที่ศักดิ์ของหนองคายและประเท...  22/07/20  \n",
-       "1  วัดติดถนนใหญ่เดินทางไปไหว้พระทำบุญได้สะดวก  บร...  30/12/19  \n",
-       "2  เป็นวัดทีชาวหนองคายนับถือ โดยมีหลวงพ่อใสที่ศัก...  27/11/19  \n",
-       "3  วัดโพธิ์ชัยนั้นเป็นพระอารามหลวง ตั้งอยู่ที่ถนน...  20/09/19  \n",
-       "4   กราบสักการะหลวงพ่อพระใส หลวงพ่อศักดิ์สิทธิ์คู...  30/07/19  \n",
-       "5  เป็นวัดที่ติดกับ บขส.หนองคาย ประตูรั้วด้านข้าง...  26/04/19  \n",
-       "6  มาเที่ยวหนองคายต้องมาขอพรที่นี่หลวงพ่อพระใส สิ...  23/04/19  \n",
-       "7  มาหนองคายต้องมาไหว้วัดพระใส สวยงาม ศักดิ์สิทธิ...  29/01/19  \n",
-       "8  กราบขอพรหลวงพ่อพระใส วัดโพธิ์ชัย จังหวัดหนองคา...  05/09/18  \n",
-       "9  วัดพระใสเป็นวัดที่มีความเชื่อว่าลูกหลานพญานาค ...  02/02/18  "
-      ]
-     },
-     "execution_count": 173,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "review_data = pd.DataFrame(columns = ['name', 'city', 'score','title','comment', 'date'])\n",
+    "\n",
+    "time.sleep(10.0)\n",
+    "\n",
+    "def printtimestamp():\n",
+    "    now = datetime.now()\n",
+    "    current_time = now.strftime(\"%H:%M:%S\")\n",
+    "    print(\"Current Time =\", current_time)\n",
+    "\n",
     "def getmonth(mtxt):\n",
     "    if(mtxt == \"มกราคม\"):\n",
     "        return \"01\"\n",
@@ -207,8 +54,7 @@
     "def loaddata():\n",
     "    data = driver.page_source\n",
     "    soup = bs4.BeautifulSoup(data)\n",
-    "    from datetime import datetime\n",
-    "\n",
+    "    \n",
     "    all_review_score = soup.find_all('svg',{'class':'RWYkj d H0'})\n",
     "    all_review_comment = soup.find_all('span',{'class':'NejBf'})\n",
     "    all_review_date = soup.find_all('div',{'class':'WlYyy diXIH cspKb bQCoY'})\n",
@@ -221,52 +67,49 @@
     "    all_review_user_list = []\n",
     "    all_review_user_city_list = []\n",
     "\n",
-    "\n",
-    "\n",
     "    for rev in all_review_user:    \n",
     "        if(rev.span.a != None):\n",
-    "            all_review_user_list.append(rev.span.a.text)\n",
+    "            all_review_user_list.append(rev.span.a.text)        \n",
+    "        if(rev.div != None and len(rev.div.text.strip()) != 0):\n",
     "            all_review_user_city_list.append(rev.div.text.split()[0].replace(',','') if ',' in rev.div.text.split()[0] else rev.div.text.split()[0])\n",
+    "        else:\n",
+    "            all_review_user_city_list.append(\"\")\n",
     "\n",
     "    for review in all_review_date:\n",
-    "        date = review.text.split()[1] if len(review.text.split()[1]) == 2 else \"0\" + review.text.split()[1]\n",
-    "        year = review.text.split()[4][2:4]\n",
-    "        month = getmonth(review.text.split()[2])\n",
-    "        datetime_txt = date + \"/\" + month + \"/\" + year\n",
-    "        review_date = datetime.strptime(datetime_txt, '%d/%m/%y')\n",
-    "        all_review_date_list.append(datetime_txt)\n",
+    "        if len(review.text) > 0:\n",
+    "            date = review.text.split()[1] if len(review.text.split()[1]) == 2 else \"0\" + review.text.split()[1]\n",
+    "            year = review.text.split()[4][2:4]\n",
+    "            month = getmonth(review.text.split()[2])\n",
+    "            datetime_txt = date + \"/\" + month + \"/\" + year\n",
+    "            #review_date = datetime.strptime(datetime_txt, '%d/%m/%y')\n",
+    "            all_review_date_list.append(datetime_txt)\n",
     "\n",
-    "    for review in all_review_score :\n",
-    "        if(len(review['aria-label'].split()) > 0):\n",
+    "    i = 1\n",
+    "    while i < len(all_review_score):\n",
+    "        review = all_review_score[i]\n",
+    "        if(len(review['aria-label'].strip()) != 0):\n",
+    "            print(review['aria-label'].strip())\n",
     "            all_review_score_list.append(float(review['aria-label'].split()[1]))\n",
+    "        i += 1\n",
+    "\n",
     "    i = 0\n",
     "    while i < len(all_review_comment) :    \n",
     "        all_review_comment_header_list.append(all_review_comment[i].text)\n",
     "        all_review_comment_list.append(all_review_comment[i+1].text)\n",
     "        i+=2\n",
+    "    \n",
     "    df = pd.DataFrame([all_review_user_list, all_review_user_city_list, all_review_score_list, all_review_comment_header_list, all_review_comment_list, all_review_date_list])\n",
     "    df = df.transpose()\n",
-    "    df.columns = ['name', 'city', 'score','title','comment', 'date']\n",
-    "    df.dropna(subset = [\"name\"], inplace=True)\n",
+    "    df.columns = ['name', 'city', 'score', 'title', 'comment', 'date']\n",
+    "    df.dropna(subset = ['title'], inplace=True)\n",
     "    return df\n",
     "\n",
     "def addtodf(review_data, df):\n",
     "    review_data = pd.concat([review_data, df], ignore_index=True)\n",
-    "    len(review_data)\n",
     "    return review_data\n",
     "\n",
     "df = loaddata()\n",
-    "addtodf(review_data, df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 183,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "button_next = driver.find_elements(By.CLASS_NAME, 'cCnaz')\n",
-    "ActionChains(driver).click(button_next.pop()).perform()"
+    "review_data = addtodf(review_data, df)"
    ]
   },
   {
@@ -275,15 +118,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = loaddata()\n",
-    "print(len(df))\n",
-    "review_data = addtodf(review_data, df)\n",
-    "print(len(review_data))"
+    "buttons_next = driver.find_elements(By.CLASS_NAME, 'cCnaz')\n",
+    "last_element = buttons_next[-1]\n",
+    "while last_element.is_displayed():\n",
+    "    ActionChains(driver).click(last_element).perform()  \n",
+    "    time.sleep(3.0)\n",
+    "    df = loaddata()\n",
+    "    review_data = addtodf(review_data, df)\n",
+    "    print(str(len(df)) + \" to \" + str(len(review_data)) + \" at \" + str(printtimestamp())) \n",
+    "    buttons_next = driver.find_elements(By.CLASS_NAME, 'cCnaz')\n",
+    "    last_element = buttons_next[-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [],
    "source": [
